--- a/acl.ini
+++ b/acl.ini
@@ -1,3 +1,15 @@
+[emojis]
+
+add_emoji=true
+remove_old_emoji=true
+
+rule=(HK|港),🇭🇰
+rule=(JP|日),🇭🇰
+#rule=(JP|日),🇯🇵
+rule=(SG|新),🇸🇬
+rule=(US|美),🇺🇲
+rule=(TW|台),🇹🇼
+
 [custom]
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则
@@ -10,65 +22,57 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🎶 网易音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-;ruleset=🎯 全球直连,[]GEOIP,LAN
-ruleset=🎯 全球直连,[]GEOIP,CN
-ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=OneDrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+ruleset=Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+ruleset=Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=DisneyPlus,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
+ruleset=Global,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=China Mainland,[]GEOIP,CN
+ruleset=Others,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
+
+custom_proxy_group=GLOBAL`select`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
+custom_proxy_group=China Mainland`select`[]DIRECT`[]GLOBAL`[]MANUAL
+custom_proxy_group=OTHERS`select`[]GLOBAL`[]MANUAL`[]DIRECT
+custom_proxy_group=MANUAL`select`.*
+custom_proxy_group=MANUAL1`select`.*
+custom_proxy_group=MANUAL2`select`.*
+custom_proxy_group=YouTube`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
+custom_proxy_group=Netflix`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]MANUAL1`[]MANUAL2`[]DIRECT
+custom_proxy_group=DisneyPlus`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]MANUAL1`[]MANUAL2`[]DIRECT
+custom_proxy_group=OneDrive`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
+custom_proxy_group=Microsoft`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
+custom_proxy_group=Apple`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
+custom_proxy_group=Telegram`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
+custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 
 
 custom_proxy_group=🇭🇰 香港+`url-test`^P.*(港|Kong).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 新加坡+`url-test`^P.*(狮城|新|Singapore).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇨🇳 台湾+`url-test`^P.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾+`url-test`^P.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本+`url-test`^P.*(日|Japan).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国+`url-test`^P.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇺🇸 美国+`url-test`^P.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
 
 custom_proxy_group=🇭🇰 香港`url-test`^S.*(港|Kong).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 新加坡`url-test`^S.*(狮城|新|Singapore).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇨🇳 台湾`url-test`^S.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾`url-test`^S.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本`url-test`^S.*(日|Japan).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国`url-test`^S.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇺🇸 美国`url-test`^S.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
 
 
 ;设置分组标志位
