--- a/acl.ini
+++ b/acl.ini
@@ -29,7 +29,7 @@ ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/
 ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=China Mainland,[]GEOIP,CN
-ruleset=OTHERS,[]FINAL
+ruleset=Others,[]OTHERS
 ;设置规则标志位
 
 ;设置分组标志位
