--- a/acl.ini
+++ b/acl.ini
@@ -1,3 +1,14 @@
+[emojis]
+
+add_emoji=true
+remove_old_emoji=true
+
+rule=(HK|港),🇭🇰
+rule=(JP|日),🇯🇵
+rule=(SG|新),🇸🇬
+rule=(US|美),🇺🇲
+rule=(TW|台),🇹🇼
+
 [custom]
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则
@@ -23,44 +34,44 @@ ruleset=Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/
 ruleset=YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=DisneyPlus,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
-ruleset=GLOBAL,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=Global,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=China Mainland,[]GEOIP,CN
-ruleset=OTHERS,[]FINAL
+ruleset=Others,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
 
-custom_proxy_group=GLOBAL`select`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
-custom_proxy_group=China Mainland`select`[]DIRECT`[]GLOBAL`[]MANUAL
-custom_proxy_group=OTHERS`select`[]GLOBAL`[]MANUAL`[]DIRECT
-custom_proxy_group=MANUAL`select`.*
-custom_proxy_group=MANUAL1`select`.*
-custom_proxy_group=MANUAL2`select`.*
-custom_proxy_group=YouTube`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
-custom_proxy_group=Netflix`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]MANUAL1`[]MANUAL2`[]DIRECT
-custom_proxy_group=DisneyPlus`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]MANUAL1`[]MANUAL2`[]DIRECT
-custom_proxy_group=OneDrive`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
-custom_proxy_group=Microsoft`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
-custom_proxy_group=Apple`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
-custom_proxy_group=Telegram`select`[]GLOBAL`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
+custom_proxy_group=Global`select`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
+custom_proxy_group=China Mainland`select`[]DIRECT`[]Global`[]Manual
+custom_proxy_group=Others`select`[]Global`[]Manual`[]DIRECT
+custom_proxy_group=Manual`select`.*
+custom_proxy_group=Manual1`select`.*
+custom_proxy_group=Manual2`select`.*
+custom_proxy_group=YouTube`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
+custom_proxy_group=Netflix`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]Manual1`[]Manual2`[]DIRECT
+custom_proxy_group=DisneyPlus`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]Manual1`[]Manual2`[]DIRECT
+custom_proxy_group=OneDrive`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
+custom_proxy_group=Microsoft`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
+custom_proxy_group=Apple`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
+custom_proxy_group=Telegram`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 
 
-custom_proxy_group=🇭🇰 香港+`url-test`^.*Premium.*(港|Kong).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡+`url-test`^.*Premium.*(狮城|新|Singapore).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾+`url-test`^.*Premium.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本+`url-test`^.*Premium.*(日|Japan).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国+`url-test`^.*Premium.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇭🇰 香港+`url-test`^P.*(港|Kong).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡+`url-test`^P.*(狮城|新|Singapore).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾+`url-test`^P.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本+`url-test`^P.*(日|Japan).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国+`url-test`^P.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
 
-custom_proxy_group=🇭🇰 香港`url-test`^.*Standard.*(港|Kong).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡`url-test`^.*Standard.*(狮城|新|Singapore).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾`url-test`^.*Standard.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本`url-test`^.*Standard.*(日|Japan).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国`url-test`^.*Standard.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇭🇰 香港`url-test`^S.*(港|Kong).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡`url-test`^S.*(狮城|新|Singapore).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾`url-test`^S.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本`url-test`^S.*(日|Japan).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国`url-test`^S.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
 
 
 ;设置分组标志位
