--- a/acl.ini
+++ b/acl.ini
@@ -45,7 +45,7 @@ ruleset=Others,[]FINAL
 
 ;设置分组标志位
 
-custom_proxy_group=Global`select`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]MANUAL`[]DIRECT
+custom_proxy_group=Global`select`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
 custom_proxy_group=China Mainland`select`[]DIRECT`[]Global`[]Manual
 custom_proxy_group=Others`select`[]Global`[]Manual`[]DIRECT
 custom_proxy_group=Manual`select`.*
