--- a/acl.ini
+++ b/acl.ini
@@ -61,17 +61,17 @@ custom_proxy_group=Telegram`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 
 
-custom_proxy_group=🇭🇰 香港+`url-test`^P.*(港|Kong).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡+`url-test`^P.*(狮城|新|Singapore).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾+`url-test`^P.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本+`url-test`^P.*(日|Japan).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国+`url-test`^P.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇭🇰 香港+`url-test`^.*Premium.*(港|Kong).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡+`url-test`^.*Premium.*(狮城|新|Singapore).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾+`url-test`^.*Premium.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本+`url-test`^.*Premium.*(日|Japan).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国+`url-test`^.*Premium.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
 
-custom_proxy_group=🇭🇰 香港`url-test`^S.*(港|Kong).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡`url-test`^S.*(狮城|新|Singapore).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾`url-test`^S.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本`url-test`^S.*(日|Japan).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国`url-test`^S.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇭🇰 香港`url-test`^.*Standard.*(港|Kong).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡`url-test`^.*Standard.*(狮城|新|Singapore).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾`url-test`^.*Standard.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本`url-test`^.*Standard.*(日|Japan).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国`url-test`^.*Standard.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
 
 
 ;设置分组标志位
