--- a/acl.ini
+++ b/acl.ini
@@ -34,31 +34,31 @@ ruleset=Others,[]FINAL
 
 ;设置分组标志位
 
-custom_proxy_group=Global`select`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
+custom_proxy_group=Global`select`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
 custom_proxy_group=China Mainland`select`[]DIRECT`[]Global`[]Manual
 custom_proxy_group=Others`select`[]Global`[]Manual`[]DIRECT
 custom_proxy_group=Manual`select`.*
 custom_proxy_group=Manual1`select`.*
 custom_proxy_group=Manual2`select`.*
-custom_proxy_group=YouTube`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
-custom_proxy_group=Netflix`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]Manual1`[]Manual2`[]DIRECT
-custom_proxy_group=DisneyPlus`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]Manual1`[]Manual2`[]DIRECT
-custom_proxy_group=OneDrive`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
-custom_proxy_group=Microsoft`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
-custom_proxy_group=Apple`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
-custom_proxy_group=Telegram`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇹🇼 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
+custom_proxy_group=YouTube`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
+custom_proxy_group=Netflix`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]Manual1`[]Manual2`[]DIRECT
+custom_proxy_group=DisneyPlus`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]Manual1`[]Manual2`[]DIRECT
+custom_proxy_group=OneDrive`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
+custom_proxy_group=Microsoft`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
+custom_proxy_group=Apple`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
+custom_proxy_group=Telegram`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 
 
 custom_proxy_group=🇭🇰 香港+`url-test`^.*Premium.*(港|Kong).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 新加坡+`url-test`^.*Premium.*(狮城|新|Singapore).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾+`url-test`^.*Premium.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇨🇳 台湾+`url-test`^.*Premium.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本+`url-test`^.*Premium.*(日|Japan).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国+`url-test`^.*Premium.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
 
 custom_proxy_group=🇭🇰 香港`url-test`^.*Standard.*(港|Kong).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 新加坡`url-test`^.*Standard.*(狮城|新|Singapore).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾`url-test`^.*Standard.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇨🇳 台湾`url-test`^.*Standard.*(台|Taiwan).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本`url-test`^.*Standard.*(日|Japan).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国`url-test`^.*Standard.*(美|States).*$`http://www.gstatic.com/generate_204`300,,150
 
