--- a/acl.ini
+++ b/acl.ini
@@ -23,6 +23,7 @@ ruleset=Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/
 ruleset=YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=DisneyPlus,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
+ruleset=RenzheEmby,https://raw.githubusercontent.com/lzp4ever/my-acl4ssr/main/RenzheEmby.list
 ruleset=Global,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -47,6 +48,7 @@ custom_proxy_group=OneDrive`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加
 custom_proxy_group=Microsoft`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
 custom_proxy_group=Apple`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
 custom_proxy_group=Telegram`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
+custom_proxy_group=RenzheEmby`select`[]🇭🇰 香港+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇺🇸 美国`[]Manual`[]DIRECT
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 
 
