--- a/acl.ini
+++ b/acl.ini
@@ -16,6 +16,7 @@ ruleset=AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/B
 ruleset=AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=China Mainland,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml
 ruleset=OneDrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 ruleset=Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
@@ -41,6 +42,7 @@ custom_proxy_group=Others`select`[]Global`[]Manual`[]DIRECT
 custom_proxy_group=Manual`select`.*
 custom_proxy_group=Manual1`select`.*
 custom_proxy_group=Manual2`select`.*
+custom_proxy_group=OpenAI`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
 custom_proxy_group=YouTube`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]DIRECT
 custom_proxy_group=Netflix`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]Manual1`[]Manual2`[]DIRECT
 custom_proxy_group=DisneyPlus`select`[]Global`[]🇭🇰 香港+`[]🇸🇬 新加坡+`[]🇨🇳 台湾+`[]🇯🇵 日本+`[]🇺🇸 美国+`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]Manual`[]Manual1`[]Manual2`[]DIRECT
